Fix (revert to default game behavior) moving the mouse pointer when opening inventory/char panels. Turns out this has an in-game use, as pointed out by a user.

--- a/src/d2dx/d2dx.vcxproj.filters
+++ b/src/d2dx/d2dx.vcxproj.filters
@@ -227,6 +227,7 @@
     <ClInclude Include="IGlide3x.h" />
     <ClInclude Include="D2DXContextFactory.h" />
     <ClInclude Include="IBuiltinResMod.h" />
+    <ClInclude Include="IWin32InterceptionHandler.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="d2dx.rc" />
