--- a/src/d2dx/d2dx.vcxproj
+++ b/src/d2dx/d2dx.vcxproj
@@ -170,6 +170,7 @@
     <ClInclude Include="dx256_bmp.h" />
     <ClInclude Include="IBuiltinResMod.h" />
     <ClInclude Include="ID2DXContext.h" />
+    <ClInclude Include="IWin32InterceptionHandler.h" />
     <ClInclude Include="IGameHelper.h" />
     <ClInclude Include="IGlide3x.h" />
     <ClInclude Include="IRenderContext.h" />
