--- a/src/d2dx/d2dx.vcxproj.filters
+++ b/src/d2dx/d2dx.vcxproj.filters
@@ -22,6 +22,9 @@
     <FxCompile Include="GammaPS.hlsl">
       <Filter>shaders</Filter>
     </FxCompile>
+    <FxCompile Include="ResolveAA.hlsl">
+      <Filter>shaders</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TextureCache.cpp" />
