--- a/src/d2dx/d2dx.vcxproj
+++ b/src/d2dx/d2dx.vcxproj
@@ -175,6 +175,7 @@
     <ClInclude Include="IRenderContext.h" />
     <ClInclude Include="ITextureCache.h" />
     <ClInclude Include="Metrics.h" />
+    <ClInclude Include="RenderContextResources.h" />
     <ClInclude Include="TextureCache.h" />
     <ClInclude Include="RenderContext.h" />
     <ClInclude Include="Batch.h" />
@@ -259,6 +260,7 @@
     <ClCompile Include="Detours.cpp" />
     <ClCompile Include="D2DXConfigurator.cpp" />
     <ClCompile Include="Metrics.cpp" />
+    <ClCompile Include="RenderContextResources.cpp" />
     <ClCompile Include="TextureCache.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="RenderContext.cpp" />
